<resources>
    <plurals name="locale_count_plural_songs">
        <item quantity="one">%d lagu ditemukan.</item>
        <item quantity="other">%d lagu ditemukan.</item>
    </plurals>
    <string name="app_name">ControlFlowApp</string>
    <string name="et_nilai_hint">Nilai</string>
    <string name="hasilnya">Hasilnya: %1$s</string>
    <string name="classification_title">Klasifikasi Nilai</string>
    <string name="square_calculation_title">Hitung Pangkat</string>
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="login_title">Login</string>
    <string name="status_login_title">Status Login: -</string>
    <string name="login_success">Status Login: Berhasil</string>
    <string name="login_failed">Status Login: Gagal</string>
    <string name="zero">0</string>
    <string name="operation_inputx">Bilangan X:</string>
    <string name="operation_inputy">Bilangan Y:</string>
    <string name="operation_reset">Reset</string>
    <string name="operation_add">+</string>
    <string name="operation_substract">-</string>
    <string name="operation_multiply">x</string>
    <string name="operation_divide">:</string>
    <string name="content_text">Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL, on October 4. We attended Google’s London UK event, mirroring the main one taking place in San Francisco, US, where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google’s long-standing Nexus series.</string>
    <string name="content_specs_display">5.0 inches\n
    FHD AMOLED at 441ppi\n
    2.5D Corning® Gorilla® Glass 4</string>
    <string name="content_specs_size">5.6 x 2.7 x 0.2 ~ 0.3 inches 143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="content_specs_battery">2,770 mAh battery\n
    Standby time (LTE): up to 19 days\n
    Talk time (3g/WCDMA): up to 26 hours\n
    Internet use time (Wi-Fi): up to 13 hours\n
    Internet use time (LTE): up to 13 hours\n
    Video playback: up to 13 hours\n
    Audio playback (via headset): up to 110 hours\n
    Fast charging: up to 7 hours of use from only 15 minutes of charging</string>
    <string name="stock">Stock hanya 5 buah</string>
    <string name="specification">Spesifikasi</string>
    <string name="display">Display</string>
    <string name="size">Size</string>
    <string name="battery">Battery</string>
    <string name="seller">Dijual oleh</string>
    <string name="my_name">Izza Kece</string>
    <string name="buy">Beli</string>
    <string name="dummy_value">$735</string>
    <string name="dummy_photos">6 photos</string>
    <string name="width">Lebar</string>
    <string name="height">Tinggi</string>
    <string name="length">Panjang</string>
    <string name="result">Hasil</string>
    <string name="calculate">Hitung</string>
    <string name="move_activity">Pindah Activity</string>
    <string name="move_with_data">Pindah Activity dengan Data</string>
    <string name="move_with_data_bundle">Pindah Activity dengan Data Bundle</string>
    <string name="move_with_object">Pindah Activity dengan Object</string>
    <string name="implicit_dial_number">Implicit Dial Phone</string>
    <string name="implicit_open_web">Implicit Open Web</string>
    <string name="implicit_send_sms">Implicit Send Sms</string>
    <string name="implicit_show_map">Implicit Show Map</string>
    <string name="implicit_share_text">Share Text</string>
    <string name="move_with_result">Pindah Activity untuk Result</string>
    <string name="result_from_activity">Hasil dari Activity</string>
    <string name="choose_number">Pilih angka yang kamu suka</string>
    <string name="value_50">50</string>
    <string name="value_100">100</string>
    <string name="value_150">150</string>
    <string name="value_200">200</string>
    <string name="choose">Pilih</string>
    <string name="data_received">Data Diterima</string>
    <string name="bundle_received">Bundle Diterima</string>
    <string name="object_received">Object Diterima</string>
    <string name="this_is_moveactivity">Ini MoveActivity</string>
    <string name="main_hero_name_text">Hero Name</string>
    <string name="main_hero_desc_text">A hero is a real person or a main fictional character of a literary work who, in the face of danger, combats adversity through feats of ingenuity, courage, or strength; the original hero type of classical epics did such things for the sake of glory and honor.</string>
    <string name="menu_list_hero">List Hero</string>
    <string name="menu_grid_hero">Grid Hero</string>
    <string name="hello_home_fragment">Hello, this is Home fragment</string>
    <string name="to_other_fragment">To Other Fragment</string>
    <string name="hello_other_fragment">Hello, this is Other fragment</string>
    <string name="to_last_fragment">To Last Fragment</string>
    <string name="hello_last_fragment">Hello, this is Last fragment</string>
    <string name="to_other_activity">To Other Activity</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="to_home_fragment">To Home Fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">First</string>
    <string name="tab_text_2">Second</string>
    <string name="close">Close</string>
    <string name="choose_color">Pilih Warna Favorit Anda:</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="search">Search</string>
    <string name="menu_search_hint">Input keyword … </string>
    <string name="locale_count_hello">Halo %1$s, kamu memiliki %2$d cubitan dari %3$s</string>
    <string name="locale_good_morning">Selamat Pagi</string>
    <string name="locale_language_settings">Ubah Pengaturan Bahasa</string>
    <string name="sp_name" translatable="false">Nama</string>
    <string name="sp_email" translatable="false">Email</string>
    <string name="sp_handphone" translatable="false">Handphone</string>
    <string name="sp_age" translatable="false">Age</string>
    <string name="sp_hobby" translatable="false">Hobby</string>
    <string name="sp_save" translatable="false">Save</string>
    <string name="sp_change" translatable="false">Change</string>
    <string name="sp_hobby_reading" translatable="false">Reading</string>
    <string name="sp_hobby_else" translatable="false">No</string>
    <string name="sp_field_required" translatable="false">Field tidak boleh kosong</string>
    <string name="sp_field_digit_only" translatable="false">Hanya boleh terisi numerik</string>
    <string name="sp_field_email_not_valid" translatable="false">Email tidak valid</string>
    <string name="weather_description" translatable="false">Deskripsi</string>
    <string name="weather_temperature" translatable="false">Temperatur</string>
    <string name="weather_city" translatable="false">Nama Kota</string>
    <string name="weather_insert_city" translatable="false">Masukkan id kota misal Jakarta = 1642911</string>
    <string name="weather_search" translatable="false">Cari</string>
    <string name="weather_id_jakarta_bandung_semarang" translatable="false">1642911,1650357,1627896</string>
    <string name="tab_contact">Contacts</string>
    <string name="profile_empty">[EMPTY]</string>
    <string name="profile_warning">Please Login to view Your Profile</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title">Judul</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="write_your_review_here">Write your review here..</string>
    <string name="send">Kirim</string>
    <string-array name="hero_name">
        <item>Ahmad Yani</item>
        <item>Sutomo</item>
        <item>Gatot Soebroto</item>
        <item>Ki Hadjar Dewantarai</item>
        <item>Mohammad Hatta</item>
        <item>Soedirman</item>
        <item>Soekarno</item>
        <item>Soepomo</item>
        <item>Tan Malaka</item>
        <item>Ahmad Dahlan</item>
    </string-array>
</resources>