<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".IntentActivity">

    <Button
        android:id="@+id/btnMoveActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/move_activity" />

    <Button
        android:id="@+id/btnMoveActivityData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/move_with_data" />

    <Button
        android:id="@+id/btnMoveActivityDataBundle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/move_with_data_bundle" />

    <Button
        android:id="@+id/btnMoveActivityObject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/move_with_object" />

    <Button
        android:id="@+id/btnDialNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial_number" />

    <Button
        android:id="@+id/btnDialNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial_number" />

    <Button
        android:id="@+id/btnMoveForResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/move_with_result" />

    <TextView
        android:id="@+id/tvIntentResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/result_from_activity"
        android:textSize="24sp" />

</LinearLayout>
